update About section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             The concept is also known<br />
             as Binairo.<br />
             <br />
-            This is a port of 0h h1 game<br />
+            This is a port of 0h h1 game.<br />
             The original game was created<br />
             by Martin Kool from Q42.
           </p>
