--- a/index.html
+++ b/index.html
@@ -151,6 +151,6 @@
       };
     </script>
     <script src="js/zepto.min.js"></script>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
